--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
   },
   "homepage": "https://github.com/marcoms/quicktap#readme",
   "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
     "webpack": "2.2.0-rc.2"
   }
 }
