Move to function-default export style (fixes #1)
quicktap.apply() -> quicktap()

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quicktap",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "An :active replacement that doesn't delay on mobile",
   "main": "dist/index.js",
   "repository": {
@@ -13,6 +13,7 @@
     "instant",
     "mobile",
     "touch",
+    "latency",
     "tap",
     "respond",
     "response",
