--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
   },
   "homepage": "https://github.com/marcoms/quicktap#readme",
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "webpack": "2.2.0-rc.2"
+    "rollup": "^0.40.0",
+    "rollup-plugin-json": "^2.1.0"
   }
 }
