--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "quicktap",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "An :active replacement that doesn't delay on mobile",
   "main": "dist/index.js",
+  "module": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/marcoms/quicktap.git"
