--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "quicktap",
-  "version": "3.1.1",
+  "version": "3.2.0",
   "description": "An :active replacement that doesn't delay on mobile",
   "main": "dist/index.js",
-  "module": "src/index.js",
+  "module": "dist/index.es.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/marcoms/quicktap.git"
